--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "vc2-loader",
+  "version": "1.0.0",
   "devDependencies": {
     "bower": "^1.5.3",
     "fs-jetpack": "^0.7.0",
@@ -8,6 +10,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.1",
     "nw": "^0.12.1",
+    "nw-builder": "^2.0.2",
     "q": "^1.0.1",
     "tree-kill": "^0.1.1",
     "yargs": "^1.3.1"
