--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-node_modules
-*.log
-.DS_Store
-Thumbs.db
-/build/
-/releases/
-/tmp/
-.idea
-.idea/**
+/node_modules
+/*.log
+/.DS_Store
+/Thumbs.db
+/build
+/releases
+/tmp
+/.idea
+/cache
+/exe
+/bower_components
